<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_menu_dictionary"
            android:title="@string/dictionary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_favourites"
            android:title="@string/favourites"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/history"/>
    </group>

    <group android:id="@+id/menu_buttom"
        android:checkableBehavior="none">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about"/>
    </group>

</menu>
