<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:orientation="horizontal"
        android:padding="@dimen/standard_margin_half">

        <AutoCompleteTextView
            android:id="@+id/search_text_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/search_box_background"
            android:drawablePadding="@dimen/standard_margin"
            android:drawableStart="@drawable/ic_search_white_24dp"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:paddingEnd="@dimen/standard_margin"
            android:paddingStart="@dimen/standard_margin"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/install_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_accent"
        android:drawablePadding="@dimen/standard_margin_half"
        android:drawableStart="@drawable/ic_info_outline_white_24dp"
        android:padding="@dimen/standard_margin"
        android:text="@string/keyboard_not_installed"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/keyboard_info_text_size"/>

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey3"
        android:padding="@dimen/standard_margin"
        android:textSize="@dimen/list_item_word_text_size"
        android:visibility="gone"
        tools:text="@string/suggestion_found"
        tools:visibility="visible"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/suggestion_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
